// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert it should mount Alert component with heading 1`] = `
.c7 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
}

.c5 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: calc(0.875 * var(--lendi-ui-size));
  line-height: calc(20 / 14);
  font-family: 'Open Sans',sans-serif;
}

.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 6px;
  padding: var(--lendi-ui-size);
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  border: 1px solid #ff1c4a;
  color: #ff1c4a;
  background-color: #fff3f5;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  line-height: 0;
}

.c4 {
  margin-left: calc(0.75 * var(--lendi-ui-size));
}

.c6 {
  margin-top: calc(0.25 * var(--lendi-ui-size));
}

.c3 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

.c3 > svg {
  fill: #ff1c4a;
  width: inherit;
  height: inherit;
}

<Alert
  heading="Alert label"
  variant="error"
>
  <styled.div
    variant="error"
    withHeading={true}
  >
    <div
      className="c0"
    >
      <styled.div>
        <div
          className="c1"
        >
          <styled.span>
            <span
              className="c2"
            >
              <Warn
                color="error.500"
              >
                <styled.span
                  color="error.500"
                >
                  <span
                    className="c3"
                    color="error.500"
                  >
                    <svg
                      fill="currentColor"
                      height="1em"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <path
                        d="M11 15h2v2h-2v-2zm0-8h2v6h-2V7zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                      />
                    </svg>
                  </span>
                </styled.span>
              </Warn>
            </span>
          </styled.span>
          <Styled(styled.p)
            size="sm"
          >
            <styled.p
              className="c4"
              size="sm"
            >
              <p
                className="c4 c5"
                size="sm"
              >
                <strong>
                  Alert label
                </strong>
              </p>
            </styled.p>
          </Styled(styled.p)>
        </div>
      </styled.div>
      <Styled(styled.p)
        size="xs"
        withHeading={true}
      >
        <styled.p
          className="c6"
          size="xs"
          withHeading={true}
        >
          <p
            className="c6 c7"
            size="xs"
          >
            Error description
          </p>
        </styled.p>
      </Styled(styled.p)>
    </div>
  </styled.div>
</Alert>
`;

exports[`Alert it should mount Alert component without heading 1`] = `
.c4 {
  margin-top: 0;
  margin-bottom: 0;
  font-size: calc(0.75 * var(--lendi-ui-size));
  line-height: calc(16 / 12);
  font-family: 'Open Sans',sans-serif;
}

.c0 {
  box-sizing: border-box;
  line-height: 1.333;
  white-space: normal;
  border-spacing: 2px;
  text-align: left;
  word-spacing: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  border-radius: 6px;
  padding: var(--lendi-ui-size);
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  border: 1px solid #ff1c4a;
  color: #ff1c4a;
  background-color: #fff3f5;
}

.c1 {
  line-height: 0;
}

.c3 {
  margin-left: calc(0.75 * var(--lendi-ui-size));
}

.c2 {
  width: 1em;
  height: 1em;
  vertical-align: middle;
}

.c2 > svg {
  fill: #ff1c4a;
  width: inherit;
  height: inherit;
}

<Alert
  variant="error"
>
  <styled.div
    variant="error"
    withHeading={false}
  >
    <div
      className="c0"
    >
      <styled.span>
        <span
          className="c1"
        >
          <Warn
            color="error.500"
          >
            <styled.span
              color="error.500"
            >
              <span
                className="c2"
                color="error.500"
              >
                <svg
                  fill="currentColor"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <path
                    d="M11 15h2v2h-2v-2zm0-8h2v6h-2V7zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
                  />
                </svg>
              </span>
            </styled.span>
          </Warn>
        </span>
      </styled.span>
      <Styled(styled.p)
        size="xs"
        withHeading={false}
      >
        <styled.p
          className="c3"
          size="xs"
          withHeading={false}
        >
          <p
            className="c3 c4"
            size="xs"
          >
            Error description
          </p>
        </styled.p>
      </Styled(styled.p)>
    </div>
  </styled.div>
</Alert>
`;
